[project]
name = "companion"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jens Widell", email = "git@jenswidell.se" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.30.1",
]

[project.scripts]
companion = "companion:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
